# some4

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json  script.md  turing_machine.py
manim_automata/: README.md
manim_automata/src/manim_automata/mobjects/: manim_automaton.py  manim_state.py  manim_transition.py
manim_test/: main.py  manim.cfg  test.jff
manim_test/media/Tex/: 020dbbc248be08c7.tex  07fcf84982f39824.tex  35cc6e721d40d789.tex  37a467a6a507d74c.tex  a1330edaeffec1b9.tex  af99d340c0d36d64.tex  c40aac7ef1b11736.tex  dc54d928d0d33562.tex  f1578bd9bccbb603.tex
manim_test/media/videos/main/1080p60/partial_movie_files/CreateCircle/: partial_movie_file_list.txt
manim_test/media/videos/main/480p15/partial_movie_files/CreateCircle/: partial_movie_file_list.txt
manim_test/media/videos/main/480p15/partial_movie_files/DefaultTemplate/: partial_movie_file_list.txt
manim_test/media/videos/main/854p30/partial_movie_files/CreateCircle/: partial_movie_file_list.txt
manim_test/media/videos/main/854p30/partial_movie_files/DefaultTemplate/: partial_movie_file_list.txt
media/videos/1080p60/partial_movie_files/CheckHealthDemo/: partial_movie_file_list.txt
