[project]
name = "some4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.0",
    "manimgl>=1.7.2",
    "setuptools>=80.9.0",
    "xmltodict>=0.14.2",
]

[tool.pyright]
venvPath = "."
venv = "venv"
pythonPath = "./venv/bin/python"
typeCheckingMode = "basic"
